[package]
name = "yew-clay"
authors = ["toadslop <bnheise@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "./README.md"
repository = "tbd"
homepage = "tbd"
keywords = ["clayui", "yew", "wasm"]
categories = ["web-programming", "wasm", "api-bindings", "gui"]
include = ["src/**/*", "Cargo.toml", "build"]
license = "Apache-2.0"
description = "Yew wrapper for Clay Web Components"

[dependencies]
gloo = "0.8.0"
js-sys = "0.3.58"
paste = "1.0.7"
wasm-bindgen = "0.2.81"
web-sys = "0.3.58"
yew = "0.19.3"

[features]