[package]
name = "yew-clay"
authors = ["toadslop <bnheise@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "./README.md"
repository = "tbd"
homepage = "tbd"
keywords = ["clayui", "yew", "wasm"]
categories = ["web-programming", "wasm", "api-bindings", "gui"]
# include = ["src/**/*", "Cargo.toml", "build"]
license = "Apache-2.0"
description = "Yew wrapper for Clay Web Components"

[dependencies]
js-sys = "0.3.58"
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"]}
yew = "0.19.3"
web-sys = "0.3.59"
stdweb = "0.4.20"
strum = "0.24.1"
strum_macros = "0.24.2"

[features]
button = []
icon = []
props = []
full = [
    "button",
    "icon",
]
default = ["button", "icon"]