[package]
name = "yew-clay"
authors = ["toadslop <bnheise@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "./README.md"
repository = "tbd"
homepage = "tbd"
keywords = ["clayui", "yew", "wasm"]
categories = ["web-programming", "wasm", "api-bindings", "gui"]
include = ["src/**/*", "Cargo.toml"]
license = "Apache-2.0"
description = "Yew wrapper for Clay Web Components"

[dependencies]
js-sys = { version ="0.3.58", optional = true }
yew = "0.19.3"
strum = { version = "0.24.1", features = ["derive"], optional = true }
strum_macros = {version = "0.24.2", optional = true }
yew-dom-attributes = { path = "../../yew-dom-attributes" }
gloo-events = "0.1.2"
derive_more = { version = "0.99.17", features = ["from"], optional = true}
web-sys = {version = "0.3.59", features = ["Window", "MouseEvent"], optional = true }
wasm-bindgen = "0.2.82"
domatt = { path = "../../domatt", optional = true }
gloo-console = "0.2.1"

[features]
button = ["dep:strum_macros","dep:derive_more"]
icon = []
layout = ["dep:strum", "dep:strum_macros"]
alert = ["dep:js-sys", "dep:strum", "dep:web-sys"]
badge = ["dep:strum"]
breadcrumb = ["link"]
link = ["domatt/anchor", "domatt/global"]
full = [
    "button",
    "icon",
    "layout",
    "alert",
    "badge",
    "breadcrumb",
    "link"
]
default = ["button", "icon", "layout", "alert", "badge", "link"]
