[package]
name = "yew-clay"
authors = ["toadslop <bnheise@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "./README.md"
repository = "tbd"
homepage = "tbd"
keywords = ["clayui", "yew", "wasm"]
categories = ["web-programming", "wasm", "api-bindings", "gui"]
include = ["src/**/*", "Cargo.toml"]
license = "Apache-2.0"
description = "Yew wrapper for Clay Web Components"

[dependencies]
js-sys = { version ="0.3.59" }
yew = "0.19.3"
strum = { version = "0.24.1", features = ["derive"] }
yew-dom-attributes = { path = "../../yew-dom-attributes" }
gloo-events = "0.1.2"
derive_more = { version = "0.99.17", features = ["from"]}
web-sys = {version = "0.3.59", features = ["Window", "MouseEvent", "Element"]}
wasm-bindgen = "0.2.82"
domatt = { path = "../../domatt" }
gloo-console = "0.2.3"

[features]
icon = []
button = ["strum/derive","derive_more/from","icon"]
layout = ["strum/derive"]
alert = ["strum/derive", "web-sys/Element"]
badge = ["strum/derive"]
breadcrumb = ["link","domatt/anchor","domatt/global","button"]
link = ["web-sys/Element"]
# full = [
#     "button",
#     "icon",
#     "layout",
#     "alert",
#     "badge",
#     "breadcrumb",
#     "link"
# ]
# default = ["button", "icon", "layout", "alert", "badge", "link"]
