[package]
name = "yew-clay"
authors = ["toadslop <bnheise@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "./README.md"
repository = "tbd"
homepage = "tbd"
keywords = ["clayui", "yew", "wasm"]
categories = ["web-programming", "wasm", "api-bindings", "gui"]
include = ["src/**/*", "Cargo.toml"]
license = "Apache-2.0"
description = "Yew wrapper for Clay Web Components"

[dependencies]
js-sys = { version ="0.3.59" }
yew = "0.19.3"
strum = { version = "0.24.1", features = ["derive"] }
yew-dom-attributes = { path = "../../yew-dom-attributes" }
gloo-events = "0.1.2"
derive_more = { version = "0.99.17", features = ["from"]}
web-sys = {version = "0.3.59", features = ["Window", "MouseEvent", "Element", "CssStyleDeclaration"]}
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"]}
domatt = { path = "../../domatt" }
gloo-console = "0.2.3"
chrono = {version = "0.4.22", default-features = false, optional = true}
lru = { version = "0.8.0" }
serde-wasm-bindgen = "0.4.3"
serde = "1.0.144"
gloo-utils = {version  = "0.1.5", default-features = false } 

[features]
icon = []
button = ["strum/derive","derive_more/from","icon"]
layout = ["strum/derive"]
alert = ["strum/derive", "web-sys/Element"]
badge = ["strum/derive"]
breadcrumb = ["link","domatt/anchor","domatt/global","button"]
link = ["web-sys/Element"]
card = ["link"]
date-picker = ["dep:chrono"]
dropdown = []
full = [
    "button",
    "icon",
    "layout",
    "alert",
    "badge",
    "breadcrumb",
    "link",
    "card",
    "date-picker",
    "dropdown"
]
default = ["full"]

[lib]
crate-type = ["cdylib"]
