[package]
name = "yew-clay-alert-example"
version = "0.1.0"
authors = ["toadslop <bnheise@gmail.com"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strum = "0.19"
strum_macros = "0.19"
yew-clay = { path = "../../yew_clay", features = ["alert", "layout", "icon", "button"]}
domatt = { path = "../../../domatt" }
yew = "0.19.3"
web-sys = {version = "0.3.59", features = ["HtmlHtmlElement"]}
yew-dom-attributes = { path = "../../../yew-dom-attributes" }
js-sys = "0.3.59"
wasm-bindgen = {version = "0.2.82", features = ["std"]}
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"
