[package]
name = "yew-clay-alert-example"
version = "0.1.0"
authors = ["toadslop <bnheise@gmail.com"]
edition = "2021"
readme = "./README.md"
description = "An example of how to use the Yew Clay component library's alert component."
repository = "https://github.com/toadslop/yew-clay"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strum = "0.24.1"
strum_macros = "0.24.3"
yew-clay = { path = "../../yew_clay", default-features = false, features = ["alert", "layout", "icon", "button"]}
domatt = { path = "../../../domatt" }
yew = "0.19.3"
web-sys = {version = "0.3.59", features = ["HtmlHtmlElement"]}
yew-dom-attributes = { path = "../../../yew-dom-attributes" }
js-sys = "0.3.59"
wasm-bindgen = {version = "0.2.82", features = ["std"]}
wee_alloc = "0.4.5"
